project1/deploy-svc-bar.yml
---
kind: Service
apiVersion: v1
metadata:
  name:  bar-svc
spec:
  selector:
    app:  bar-app
  # type:  ClusterIP
  # ClusterIP: 10.233.10.10
  ports:
  - name: bar-app
    port:  8080
    targetPort:  8080

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bar-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar-app
  template:
    metadata:
      name: bar-pod
      labels:
        app: bar-app
    spec:
      containers:
      - name: bar-container
        image: whatwant/node-web:2.0
        ports:
        - containerPort: 8080
